tests/base/invalid/Function_Invalid_5.whiley
int ::m():
    return 20
 
int f():
    return m() 